# flai

./: COPILOT_ANALYSIS.md  Readme.md  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md
flai/cli/: __init__.py  cli.py
