[project]
name = "flai"
version = "1.0.0"
description = "Flai - Framework local para ia"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

authors = [
    { name = "Alex Yucra" }
]

keywords = [
    "ia local",
    "localhost ia",
    "framework de ia local",
    "pip install flai",
    "flai",
    "flet",
    "ollama",
    "llm local",
    "framework",
    "mvc",
    "ui",
    "desktop",
    "mobile",
    "apk",
    "app",
    "android"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "fleting",
    "rich",
    "typer",
    "psutil",
    "langchain"
]

# ------------------------
# CLI ENTRY POINT
# ------------------------
[project.scripts]
flai = "flai.cli.cli:main"

# ------------------------
# URLs (PyPI)
# ------------------------
[project.urls]
Homepage = "https://github.com/alexyucra/flai"
Documentation = "https://github.com/alexyucra/flai/tree/main/docs"
Repository = "https://github.com/alexyucra/flai"
Issues = "https://github.com/alexyucra/flai/issues"

# ------------------------
# BUILD SYSTEM (Poetry)
# ------------------------
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
